--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,19 +2,6 @@
   url: "/"
   side: left
 
-- title: "BIBLE STUDY"
-  url: "/bible-topics/"
-  side: left
-  dropdown:
-  - title: "Parables"
-    url: "/bible-topics/parables/"
-  - title: "Meditations"
-    url: "/bible-topics/meditations/"
-  - title: "Galatians"
-    url: "/bible-topics/book-of-galatians/"
-  - title: "Romans"
-    url: "/bible-topics/book-of-romans/"
-
 - title: Blog
   url: "/blog/"
   side: left
@@ -22,6 +9,6 @@
   - title: "Blog Archive"
     url: "/blog/archive/"
 
-- title: "About"
-  url: "/info/"
+- title: "Contact"
+  url: "/contact/"
   side: left
