Fixed link to mission-statement from footer

--- a/_data/network.yml
+++ b/_data/network.yml
@@ -1,4 +1,4 @@
 - menu_name: "mission"
 - name: "Preserve – Embrace and cultivate the historical impact that arts and culture has provided within the Southeast Asian community."
-  url: "/mission-statement/"
+  url: "/english/mission-statement/"
   title: "OUR MISSION"
