Disable Laos page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@
   - title: "About SEAACC - Cambodia"
     url: "/cambodia/"
   - title: "About SEAACC - Laos"
-    url: "/laos/"
+    url: "/"
   - title: "About SEAACC - Myanmar"
     url: "/myanmar/"
   - title: "About SEAACC - Thailand"
