temp reset of url to github.io

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,8 @@ author: nghin
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'http://seaacc-sf.org'
+# url: 'http://seaacc-sf.org'
+url: 'https://nghin.github.io/seaaccsf.org'
 baseurl: ''
 # projectname /seaaccsf.org is needed if nghin.github.io is accessed directly
 projectname: '/seaaccsf.org'
