--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -5,12 +5,10 @@
 #
 # Start development with › $ jekyll serve --config _config.yml,_config_dev.yml
 
-# url: 'http://localhost:4000'
-url: 'http://jekyll.seaacc-sf.org'
+url: 'http://localhost:4000'
 baseurl: ''
 projectname: ''
-# urlimg: 'http://localhost:4000/images/'
-urlimg: 'http://jekyll.seaacc-sf.org/images/'
+urlimg: 'http://localhost:4000/images/'
 
 sass:
   # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
