Changed Facebook optimization

--- a/_config.yml
+++ b/_config.yml
@@ -178,8 +178,8 @@ msapplication_tilecolor:                "#fabb00"
 og_image:                           ""
 og_locale:                          "en_EN"
 og_type:                            "website"
-og_title:                           "The Whole Bible is About Jesus!"
-og_description:                     "Know with certainty your salvation. To please and bear fruit to God. Learn how to walk by faith. Rest for your soul. Peace with God. Abundant life."
+og_title:                           "Site Title"
+og_description:                     "Site Description"
 # og_url:                           ""
 # og_site_name:                     ""
 
